--- a/k8s/overlays/local/kustomization.yaml
+++ b/k8s/overlays/local/kustomization.yaml
@@ -1,4 +1,5 @@
+apiVersion: kustomize.config.k8s.io/vi=1beta1
+kind: Kustomization
+
 resources:
   - ../../base
-patchesStrategicMerge:
-  - patches.yaml
